Fixed homepage overflow

--- a/public/css/terms.css
+++ b/public/css/terms.css
@@ -2,11 +2,12 @@
     font-size: 17px;
     border-top: 1px solid #979797;
     color: grey;
+    word-break: break-all;
     font-weight: 400;
 }
 
 #terms-container {
-    width: 750px;
+    max-width: 750px;
     margin: 50px auto;
     height: 220px;
 }
